# rust-deployment-test

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.runtime  docker-bake.hcl
.github/workflows/: build-cache.yml  build-chef.yml  build-docker.yml
src/: entity.rs  main.rs
